[tool.poetry]
name        = "py-clob-client"
version     = "0.23.0"
description = "Python client for the Polymarket CLOB"
authors     = ["Felix"]

[tool.poetry.dependencies]
python = ">=3.9.10,<4.0"
eth-utils = ">=4.1.1"
poly_eip712_structs = "0.0.1"
pytest = "8.2.2"
python-dotenv = "0.19.2"
requests = "^2.29.0"
websockets = ">=10"
py_order_utils = { git = "https://github.com/felixjchen/py-order-utils.git", rev = "21613870c2f67930fff4ac942dc1aa1ed538830e" }
